<resources>
    <string name="app_name">CatalogueMovie</string>
    <string name="poster_movie">Poster Movie</string>
    <string name="date_relealesed">date realease</string>
    <string name="star_icon">ikon</string>
    <string name="user_score">86%</string>
    <string name="timer_icon">jam</string>
    <string name="runtime">2h 10m</string>
    <string name="tvshow_poster">poster tv show</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="movies">Movies</string>
    <string name="tv_show">TV Show</string>
    <string name="title">Judul Movie</string>
    <string name="status">active</string>
    <string name="language">English</string>
    <string name="budget">$14</string>
    <string name="tittle_budget">Budget Movie</string>
    <string name="title_revenue">Revenue</string>
    <string name="revenue">$14</string>
    <string name="genres">Genre</string>
    <string name="genre_detail">Horror</string>
    <string name="overview">Lorem Ipsum blalnal</string>
    <string name="title_crew">Crew</string>
    <string name="open">You Open</string>
    <string name="change_language_settings">Open Language</string>
    <string name="codelang">null</string>
    <string name="favorite">Kesukaan</string>
    <string name="save_this_movie">save this movie</string>
    <string name="delete_this_movie">delete this movie</string>
    <string name="save_this_serial">save this serial</string>
    <string name="delete_this_serial">Delete this serial</string>
    <string name="appwidget_text">Catalogue Movie</string>
    <string name="empty_text">Loading...</string>
    <string name="seven_morning_notif_title">Buka MovieDbmu</string>
    <string name="seven_morning_notif_message">Ayo buka Aplikasimu, cek film menarik di sini</string>
    <string name="daily_reminder_setting_title">Daily Reminder</string>
    <string name="daily_reminder_setting_message">I will say hello to you every morning. Don\'t miss every update!
    </string>
    <string name="release_reminder_setting_title">Release Reminder</string>
    <string name="release_reminder_setting_message">We will give you notification for daily released movie</string>
    <string name="setting_reminder">Setting Reminder</string>
    <string name="toas_no_rem">Release Reminder is Not Active</string>
    <string name="toast_rem">Release Reminder is Active</string>
    <string name="eightthemorning">Ada film terbaru nih</string>
    <string name="eightthemorningmessage">Lihat film terbaru di MovieDB</string>
    <string name="toast_rem_daily">release today active</string>
    <string name="toas_no_rem_daily">release is not active</string>
    <string name="successinput">input data success</string>
    <string name="successdelete">success delete data</string>
    <string name="search">Search</string>
    <string name="search_movie">Search Movie</string>
    <string name="search_tv_show">Search Tv Show</string>
    <string name="cancel">Cancel</string>
    <string name="titlerilis">Realese Movie</string>

</resources>
