<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Movies.Detail.DetailMovies">

    <ProgressBar android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:progress="25"
                 android:layout_centerInParent="true"
                 android:id="@+id/movieDetil"
                 app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>


    <Button
            android:id="@+id/favoritestate"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/save_this_movie"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/title_moviedetail" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/tv_item_dateReleasedmovie"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.949" app:layout_constraintVertical_bias="0.034"/>


    <ImageView
            android:id="@+id/poster"
            android:layout_width="152dp"
            android:layout_height="206dp"
            android:contentDescription="@string/poster_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@color/colorAccent" android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>

    <TextView
            android:id="@+id/tv_title_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/tittle_budget"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toEndOf="@+id/poster"
            app:layout_constraintTop_toTopOf="@+id/poster"
            app:layout_constraintVertical_bias="0.006"/>

    <TextView
            android:id="@+id/tv_item_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/budget"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/poster"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_budget"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_title_budget"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_budget"
            app:layout_constraintVertical_bias="0.021"/>

    <TextView
            android:id="@+id/tv_title_revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title_revenue"
            app:layout_constraintBottom_toBottomOf="@+id/poster"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_budget"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_item_budget"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_budget"
            app:layout_constraintVertical_bias="0.009"/>

    <TextView
            android:id="@+id/tv_item_revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/revenue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/poster"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_revenue"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_title_revenue"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_revenue"
            app:layout_constraintVertical_bias="0.076"/>

    <TextView
            android:id="@+id/tc_title_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/genres"
            app:layout_constraintBottom_toBottomOf="@+id/poster"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_revenue"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_item_revenue"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_revenue"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:id="@+id/tv_item_genre"
            android:layout_width="173dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/genre_detail"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tc_title_genre"
            app:layout_constraintTop_toBottomOf="@+id/tc_title_genre"
            app:layout_constraintVertical_bias="0.0" android:layout_marginRight="8dp"/>

    <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/star_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster"
            app:layout_constraintVertical_bias="0.091"
            app:srcCompat="@drawable/ic_stars_pink_24dp"
            tools:ignore="VectorDrawableCompat"/>

    <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/timer_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/poster"
            app:layout_constraintVertical_bias="0.091"
            app:srcCompat="@drawable/ic_av_timer_pink_24dp" tools:ignore="VectorDrawableCompat"/>



    <TextView
            android:id="@+id/tv_item_userScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_score"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="1.0"/>

    <TextView
            android:id="@+id/tv_item_runtimedetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/runtime"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.583"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:id="@+id/tv_item_statusdetail"
            android:layout_width="wrap_content"
            android:layout_height="277dp"
            android:text="@string/status"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_runtime" app:layout_constraintHorizontal_bias="0.252"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_item_genre"/>

    <TextView
            android:id="@+id/tv_item_language"
            android:layout_width="49dp"
            android:layout_height="0dp"
            android:text="@string/language"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/tv_item_status" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.408"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_overview"
            android:layout_marginBottom="72dp"/>

    <TextView
            android:id="@+id/title_moviedetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="228dp"
            android:text="@string/title"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044"/>

    <ImageView
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@color/colorAccent" android:layout_marginTop="300dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_overview" app:layout_constraintVertical_bias="0.021"/>

    <TextView
            android:id="@+id/tv_item_dateReleasedmovie"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/date_relealesed"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/line3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.865"
            android:layout_marginBottom="8dp"/>

    <TextView
            android:id="@+id/tv_item_overview"
            android:paddingTop="20dp"
            android:layout_width="356dp"
            android:layout_height="297dp"
            android:text="@string/overview"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_item_runtimedetail"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_language" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_item_userScore"/>

</androidx.constraintlayout.widget.ConstraintLayout>