<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".SettingReminder">

    <!--<androidx.appcompat.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:title="Reminder Setting"-->
            <!--app:titleTextColor="@android:color/white"-->
            <!--android:background="@color/colorPrimary" />-->

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_within_object"
            android:layout_marginLeft="@dimen/margin_within_object"
            android:layout_marginRight="@dimen/margin_within_object"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/release_reminder_setting_title"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/release_reminder_setting_message" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/releaseTodaySwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_within_object"
            android:layout_marginLeft="@dimen/margin_within_object"
            android:layout_marginRight="@dimen/margin_within_object"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_reminder_setting_title"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_reminder_setting_message" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/dailyReminderSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>