<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        tools:cardCornerRadius="4dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="8dp">
        <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_marginBottom="4dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/tvshow_poster"
                tools:src="@color/colorAccent" />
        <LinearLayout
                android:layout_width="284dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="3dp"
                android:layout_toEndOf="@id/img_item_photo"
                android:orientation="vertical"
                android:layout_alignParentRight="true"
                android:layout_marginRight="3dp"
                android:layout_toRightOf="@id/img_item_photo">
            <TextView
                    android:id="@+id/tv_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/vertical_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_marginRight="@dimen/vertical_margin"
                    android:layout_marginBottom="2dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Title movie" />
            <TextView
                    android:id="@+id/tv_item_dateReleased"
                    android:layout_width="244dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:padding="2dp"
                    android:text="@string/date_relealesed"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:layout_marginLeft="16dp"/>
        </LinearLayout>
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="16dp"
                android:stretchColumns="*"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/img_item_photo"
                android:orientation="vertical" android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/img_item_photo">
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/star_icon"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:padding="7dp"
                        android:src="@drawable/ic_stars_pink_24dp" />

                <TextView
                        android:id="@+id/tv_item_userScore"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="13dp"
                        android:text="@string/user_score"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                <!--<ImageView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:contentDescription="@string/timer_icon"-->
                        <!--android:ellipsize="end"-->
                        <!--android:maxLines="3"-->
                        <!--android:padding="7dp"-->
                        <!--android:src="@drawable/ic_av_timer_pink_24dp"-->
                        <!--android:textAlignment="center" />-->

                <!--<TextView-->
                        <!--android:id="@+id/tv_item_runtime"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:paddingTop="13dp"-->
                        <!--android:text="@string/runtime"-->
                        <!--android:textSize="12sp"-->
                        <!--android:textStyle="bold" />-->
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>